@@ -41,6 +41,10 @@ S3method(d, data.frame)
 S3method(d, default) 
 S3method(d, matrix) 
 S3method(d, zoo) 
+S3method(dr, data.frame)
+S3method(dr, default) 
+S3method(dr, matrix) 
+S3method(dr, zoo) 
 S3method(gof, data.frame) 
 S3method(gof, default) 
 S3method(gof, matrix) 
